# salesforce-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
salesforce_mcp/: __init__.py  __main__.py  _server.py  auth.py  middleware.py  salesforce.py  server.py
