[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-mcp"
version = "0.1.0"
description = "Read-only MCP server for Salesforce (SOQL, describe, list objects) with OAuth 2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0,<2",
    "requests>=2.28",
    "requests-oauthlib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["salesforce_mcp*"]
