[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-mcp"
version = "0.1.0"
description = "Read-only MCP server for Salesforce (SOQL, describe, list objects) via Client Credentials over Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0,<2",
    "requests>=2.28",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["salesforce_mcp*"]
